--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -93,6 +93,8 @@
             }
         .addres
             {
+                padding:0;
+                margin:0;
                 background-color:rgb(0,0,0,0.5);
                 border:0;
             }
