--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -101,7 +101,7 @@
             #title_image
             {
                 width:100%;
-                height:110px;
+                height:cal(110px 100%);
             }
         li{
                 background-color: rgb(0,0,0,0.5);
