--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -100,6 +100,7 @@
             }
             #title_image
             {
+                width:100%;
                 height:110px;
             }
         li{
