--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -100,7 +100,7 @@
             }
             #title_image
             {
-                width:80%;
+                width:177px;
                 height:110px;
             }
         li{
