--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -100,7 +100,7 @@
             }
             #title_image
             {
-                width:70px;
+                width:50%;
                 height:110px;
             }
         li{
