--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -55,6 +55,7 @@
 
         }
         #title_font{
+            float: left;
             margin-top:30px;
             color:aliceblue;
             font-style:normal;
