--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -55,7 +55,8 @@
 
         }
         #title_font{
-            float: left;
+            float:right;
+            padding-right:50px;
             margin-top:30px;
             color:aliceblue;
             font-style:normal;
