--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -115,6 +115,7 @@
                 font-variant-caps: all-small-caps;
             }
         li{
+            width:auto;
                 background-color: rgb(0,0,0,0.5);
                 border-bottom:1px solid rgb(0,0,0,0.7);
             }
