--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -115,7 +115,7 @@
                 font-variant-caps: all-small-caps;
             }
         li{
-                width:100%;
+                overflow-x:auto;
                 background-color: rgb(0,0,0,0.5);
                 border-bottom:1px solid rgb(0,0,0,0.7);
             }
