--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -84,6 +84,7 @@
             }
         .navi
             {
+                grid-column:1/2.5;
                 background-color:rgb(0,0,0,0.5);
                 border:thin solid rgb(0,0,0,0.3);
 
