--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -72,7 +72,7 @@
                     
         .main{
                 
-               margin:0;
+                margin:0;
                 grid-auto-rows:minmax(110px,auto);
             }
         .title 
@@ -84,7 +84,7 @@
             }
         .navi
             {
-                grid-column:1/2.5;
+                width:fit-content;
                 background-color:rgb(0,0,0,0.5);
                 border:thin solid rgb(0,0,0,0.3);
 
@@ -102,12 +102,12 @@
                 background-color:rgb(0,0,0,0.5);
                 border:0;
             }
-            #title_image
+        #title_image
             {
                 width:25%;
                 height:110px;
             }
-            #title_font{
+        #title_font{
                 float:right;
                 padding-right:50px;
                 margin-top:30px;
@@ -116,7 +116,7 @@
                 font-variant-caps: all-small-caps;
             }
         li{
-                width:110%;
+                
                 background-color: rgb(0,0,0,0.5);
                 border-bottom:1px solid rgb(0,0,0,0.7);
             }
@@ -124,7 +124,7 @@
                 background-color: transparent;
                 color:white;
             }
-            i{
+        i{
                 color:white;
             }
             
