--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -39,7 +39,7 @@
             padding:0;
             margin:0;
         }
-        li{
+        .links{
             border-bottom:1px solid rgb(0,0,0,0.7);
             background-color:rgb(0,0,0,0.5);
             position:relative;
@@ -115,7 +115,7 @@
                 font-style:normal;
                 font-variant-caps: all-small-caps;
             }
-        li{
+        .links{
                 height:4em;     
                 background-color: rgb(0,0,0,0.5);
                 border-bottom:1px solid rgb(0,0,0,0.7);
