--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -39,7 +39,7 @@
             padding:0;
             margin:0;
         }
-        .links{
+        li{
             border-bottom:1px solid rgb(0,0,0,0.7);
             background-color:rgb(0,0,0,0.5);
             position:relative;
