--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -116,6 +116,7 @@
                 font-variant-caps: all-small-caps;
             }
         .links{
+                padding-top: 10px;
                 height:4em;     
                 background-color: rgb(0,0,0,0.5);
                 border-bottom:1px solid rgb(0,0,0,0.7);
