--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -43,7 +43,7 @@
             border-bottom:1px solid rgb(0,0,0,0.7);
             background-color:rgb(0,0,0,0.5);
             position:relative;
-            width:100%;
+            width:max-content;
             height:2em;
             text-align:center;
             padding-top:5px;
