--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -34,7 +34,7 @@
             background-color:rgb(0,0,0,0.5)
         }
         ul{
-            
+            text-align:center;
             list-style-type:none;
             padding:0;
             margin:0;
@@ -43,7 +43,7 @@
             border-bottom:1px solid rgb(0,0,0,0.7);
             background-color:rgb(0,0,0,0.5);
             position:relative;
-            width:max-content;
+            display:inline-block;
             height:2em;
             text-align:center;
             padding-top:5px;
