--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -44,6 +44,7 @@
             background-color:rgb(0,0,0,0.5);
             position:relative;
             display:inline-block;
+            width:max-content;
             height:2em;
             text-align:center;
             padding-top:5px;
