--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -43,9 +43,8 @@
             border-bottom:1px solid rgb(0,0,0,0.7);
             background-color:rgb(0,0,0,0.5);
             position:relative;
-            width:max-content;
+            width:100%;
             height:2em;
-            text-align:center;
             padding-top:5px;
         }
         a{
