--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -40,6 +40,7 @@
             margin:0;
         }
         li{
+            
             border-bottom:1px solid rgb(0,0,0,0.7);
             background-color:rgb(0,0,0,0.5);
             position:relative;
@@ -116,7 +117,7 @@
             }
         .links{
                 
-                
+                max-height: 4em;
                 background-color: rgb(0,0,0,0.5);
                 border-bottom:1px solid rgb(0,0,0,0.7);
             }
