--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -117,7 +117,7 @@
             }
         .links{
                 
-                max-height: 4em;
+                min-height: 4em;
                 background-color: rgb(0,0,0,0.5);
                 border-bottom:1px solid rgb(0,0,0,0.7);
             }
