--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -116,7 +116,8 @@
                 font-variant-caps: all-small-caps;
             }
         .links{
-                
+
+                padding-top:5px;                
                 min-height: 4em;
                 background-color: rgb(0,0,0,0.5);
                 border-bottom:1px solid rgb(0,0,0,0.7);
