--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -62,6 +62,9 @@
             font-style:normal;
             font-variant-caps: all-small-caps;
         }
+        #title_image{
+              width:120px;
+        }
 
         @media only screen and (max-width:600px)
         {
