--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -34,7 +34,7 @@
             background-color:rgb(0,0,0,0.5)
         }
         ul{
-            text-align:justify;
+            text-align:center;
             list-style-type:none;
             padding:0;
             margin:0;
@@ -46,7 +46,7 @@
             position:relative;
             width:100%;
             height:2em;
-            padding-top:5px;
+            margin-top:5px;
         }
         a{
             
@@ -63,7 +63,7 @@
             font-variant-caps: all-small-caps;
         }
         #title_image{
-              width:120px;
+              width:200px;
         }
 
         @media only screen and (max-width:600px)
