--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -46,10 +46,10 @@
             position:relative;
             width:100%;
             height:2em;
-            margin-top:5px;
+            
         }
         a{
-            
+            padding-top:10px;
             text-decoration:transparent;
             color:white;
 
