--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -41,7 +41,7 @@
         }
         li{
             
-            border-bottom:1px solid rgb(0,0,0,0.7);
+            border-bottom:1px solid rgba(255,255,255,0.8);
             background-color:rgb(0,0,0,0.5);
             position:relative;
             width:100%;
@@ -49,15 +49,15 @@
             
         }
         a{
-            padding-top:10px;
+            margin-top:10px;
             text-decoration:transparent;
             color:white;
 
         }
         #title_font{
             float:right;
-            padding-right:150px;
-            margin-top:30px;
+            padding-right:180px;
+            margin-top:40px;
             color:aliceblue;
             font-style:normal;
             font-variant-caps: all-small-caps;
