--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -41,15 +41,15 @@
         }
         li{
             
-            border-bottom:1px solid rgba(255,255,255,0.8);
+            border-bottom:1px solid rgba(255,255,255,0.5);
             background-color:rgb(0,0,0,0.5);
             position:relative;
             width:100%;
             height:2em;
-            
+            padding-top:10px;
         }
         a{
-            margin-top:10px;
+            
             text-decoration:transparent;
             color:white;
 
