--- a/Mainstyles.css
+++ b/Mainstyles.css
@@ -65,6 +65,9 @@
         #title_image{
               width:200px;
         }
+        #icon_styles{
+            margin-left:50px;
+        }
 
         @media only screen and (max-width:600px)
         {
